Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27273

float->int error in OS X Mouse Event Handling

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 4.8.3, 4.8.x
    • None
    • Mac OS X 10.7.4, Xcode 4.4
    • macOS
    • 33ee8dff49fa89b83ce793974208304fd19dc367

    Description

      NSEvent for mouse events contain the mouse position in floating
      point numbers. This value is truncated/floored for mouse clicks.
      Qt instead rounds that value, so mouse move events can get positions
      that are slightly off sometimes.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            cbreak Gerhard Röthlin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes