float->int error in OS X Mouse Event Handling

NSEvent for mouse events contain the mouse position in floating
point numbers. This value is truncated/floored for mouse clicks.
Qt instead rounds that value, so mouse move events can get positions
that are slightly off sometimes. This solves #QTBUG-27273.

Change-Id: I2d3f59a09f50cb83dc1ccf6de940b7d99087c9ee
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>